--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
-  <body>
-    Salut!
+  <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        body{
+            color:#434343;
+        }
+        .imaj{
+            filter:blur(40px);
+        }
+        .custom{
+            position:absolute;
+            top:200px;
+            left:20px;
+            font-size: 60px;
+            font-weight: 700;
+            text-shadow: 0px 11px 20px rgba(150, 150, 150, 0.8);
+        }
+        .custom2{
+            margin-top:60px;
+            font-size: 30px;
+            font-weight: 300;
+        }
+    </style>
+  </head>
+  <body class="bg-white">
+    
+    <div class="container text-center">
+        
+        <div class="row">
+          <div class="col align-self-center ">
+            <img src="bkg_custom.jpg" 
+                class="img-fluid imaj" >
+          </div>
+        </div>
+        <div class="custom col align-self-center">
+            Vlad Comarlau
+        </div>
+        <div class="custom custom2 col align-self-center">
+            soon
+        </div>
+      </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script>
+        $('#example').tooltip(options)
+    </script>
   </body>
 </html>
