--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         .custom{
             position:absolute;
             top:200px;
+            left: 0px;
             font-size: 60px;
             font-weight: 700;
             text-shadow: 0px 11px 20px rgba(150, 150, 150, 0.8);
