--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Vlad Comarlau
         </div>
         <div class="custom custom2 col align-self-center">
-            soon
+            when it's ready
         </div>
       </div>
 
